# tsop

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  modules.rst
tests/: test_examples.py
tsop/: basic.h  basic.pyx
