[build-system]
requires = ["setuptools>=61.0", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "tsop"
version = "0.1.0"
description = "Cython/C++ operator library for 2D financial time series"
authors = [{ name = "Yili" }]
dependencies = ["numpy", "cython"]
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
include = ["tsop", "tsop.*"]

[tool.black]
include = '\.py$'
exclude = '\.pyx$'